Adding permissions to the endpoints