@@ -28,148 +28,155 @@ import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.*;
 @RequiredArgsConstructor
 public class UserController {
 
-        private final UserService userService;
-        private final AuthUtils authUtils;
-        private final RoleResolver roleResolver;
+    private final UserService userService;
+    private final AuthUtils authUtils;
+    private final RoleResolver roleResolver;
 
-        /* ===================== UPDATE PROFILE ===================== */
-        @PutMapping("/update/{id}")
-        public ResponseEntity<EntityModel<GetUserDTO>> updateProfile(
-                        @PathVariable Long id,
-                        @Valid @RequestBody UpdateUserDTO updatedUserDTO) {
+    /* ===================== UPDATE PROFILE ===================== */
+    @PreAuthorize("hasAuthority('USER_VIEW') or #id == principal.id")
+    @PutMapping("/update/{id}")
+    public ResponseEntity<EntityModel<GetUserDTO>> updateProfile(
+                    @PathVariable Long id,
+                    @Valid @RequestBody UpdateUserDTO updatedUserDTO) {
 
-                GetUserDTO updatedUser = userService.updateUser(id, updatedUserDTO);
+        GetUserDTO updatedUser = userService.updateUser(id, updatedUserDTO);
 
-                EntityModel<GetUserDTO> model = EntityModel.of(
-                                updatedUser,
-                                linkTo(methodOn(UserController.class).getUserById(id)).withSelfRel(),
-                                linkTo(methodOn(UserController.class).getAllUsers(0, 10)).withRel("all-users"));
+        EntityModel<GetUserDTO> model = EntityModel.of(
+                        updatedUser,
+                        linkTo(methodOn(UserController.class).getUserById(id)).withSelfRel(),
+                        linkTo(methodOn(UserController.class).getAllUsers(0, 10)).withRel("all-users"));
 
-                return ResponseEntity.ok(model);
-        }
+        return ResponseEntity.ok(model);
+    }
 
-        /* ===================== CHANGE PASSWORD ===================== */
-        @PutMapping("/{id}/changePassword")
-        public ResponseEntity<EntityModel<ApiResponse>> changePassword(
-                        @PathVariable Long id,
-                        @RequestBody ResetPasswordDTO dto) {
+    /* ===================== CHANGE PASSWORD ===================== */
+    @PreAuthorize("#id == principal.id or hasAuthority('USER_VIEW')")
+    @PutMapping("/{id}/changePassword")
+    public ResponseEntity<EntityModel<ApiResponse>> changePassword(
+                    @PathVariable Long id,
+                    @RequestBody ResetPasswordDTO dto) {
 
-                userService.updatePassword(id, dto);
+        userService.updatePassword(id, dto);
 
-                EntityModel<ApiResponse> response = EntityModel.of(
-                                new ApiResponse("Password updated successfully"),
-                                linkTo(methodOn(UserController.class).getUserById(id)).withSelfRel());
+        EntityModel<ApiResponse> response = EntityModel.of(
+                        new ApiResponse("Password updated successfully"),
+                        linkTo(methodOn(UserController.class).getUserById(id)).withSelfRel());
 
-                return ResponseEntity.ok(response);
-        }
+        return ResponseEntity.ok(response);
+    }
 
-        /* ===================== CHANGE PASSWORD (CURRENT USER) ===================== */
-        @PreAuthorize("isAuthenticated()")
-        @PutMapping("/me/changePassword")
-        public ResponseEntity<EntityModel<ApiResponse>> changePasswordForCurrentUser(
-                        @RequestBody ResetPasswordDTO dto) {
+    /* ===================== CHANGE PASSWORD (CURRENT USER) ===================== */
+    @PreAuthorize("isAuthenticated()")
+    @PutMapping("/me/changePassword")
+    public ResponseEntity<EntityModel<ApiResponse>> changePasswordForCurrentUser(
+                    @RequestBody ResetPasswordDTO dto) {
 
-                Long userId = authUtils.getCurrentUserId();
-                userService.updatePassword(userId, dto);
+        Long userId = authUtils.getCurrentUserId();
+        userService.updatePassword(userId, dto);
 
-                EntityModel<ApiResponse> response = EntityModel.of(
-                                new ApiResponse("Password updated successfully"),
-                                linkTo(methodOn(UserController.class).getCurrentUser()).withSelfRel());
+        EntityModel<ApiResponse> response = EntityModel.of(
+                        new ApiResponse("Password updated successfully"),
+                        linkTo(methodOn(UserController.class).getCurrentUser()).withSelfRel());
 
-                return ResponseEntity.ok(response);
-        }
+        return ResponseEntity.ok(response);
+    }
 
-        /* ===================== DELETE USER ===================== */
-        @DeleteMapping("/{id}")
-        public ResponseEntity<EntityModel<ApiResponse>> deleteUser(@PathVariable Long id) {
-                userService.deleteUser(id);
+    /* ===================== DELETE USER ===================== */
+    @PreAuthorize("hasAuthority('USER_VIEW')")
+    @DeleteMapping("/{id}")
+    public ResponseEntity<EntityModel<ApiResponse>> deleteUser(@PathVariable Long id) {
+        userService.deleteUser(id);
 
-                EntityModel<ApiResponse> response = EntityModel.of(
-                                new ApiResponse("User deleted successfully"),
-                                linkTo(methodOn(UserController.class).getAllUsers(0, 10)).withRel("all-users"));
+        EntityModel<ApiResponse> response = EntityModel.of(
+                        new ApiResponse("User deleted successfully"),
+                        linkTo(methodOn(UserController.class).getAllUsers(0, 10)).withRel("all-users"));
 
-                return ResponseEntity.ok(response);
-        }
+        return ResponseEntity.ok(response);
+    }
 
-        /* ===================== GET USER BY INTERNAL ID ===================== */
-        @GetMapping("/id/{id}")
-        public ResponseEntity<EntityModel<GetUserDTO>> getUserById(@PathVariable Long id) {
-                GetUserDTO user = userService.getUserById(id);
-                return ResponseEntity.ok(buildUserModel(user));
-        }
+    /* ===================== GET USER BY INTERNAL ID ===================== */
+    @PreAuthorize("hasAuthority('USER_VIEW')")
+    @GetMapping("/id/{id}")
+    public ResponseEntity<EntityModel<GetUserDTO>> getUserById(@PathVariable Long id) {
+        GetUserDTO user = userService.getUserById(id);
+        return ResponseEntity.ok(buildUserModel(user));
+    }
 
-        /* ===================== GET USER BY PUBLIC ID ===================== */
-        @GetMapping("/{publicId}")
-        public ResponseEntity<EntityModel<GetUserDTO>> getUserByPublicId(@PathVariable String publicId) {
-                GetUserDTO user = userService.getUserByPublicId(publicId);
-                return ResponseEntity.ok(buildUserModel(user));
-        }
+    /* ===================== GET USER BY PUBLIC ID ===================== */
+    @PreAuthorize("hasAuthority('USER_VIEW')")
+    @GetMapping("/{publicId}")
+    public ResponseEntity<EntityModel<GetUserDTO>> getUserByPublicId(@PathVariable String publicId) {
+        GetUserDTO user = userService.getUserByPublicId(publicId);
+        return ResponseEntity.ok(buildUserModel(user));
+    }
 
-        /* ===================== CURRENT USER ===================== */
-        @GetMapping("/me")
-        public ResponseEntity<EntityModel<GetUserDTO>> getCurrentUser() {
-                Long userId = authUtils.getCurrentUserId();
-                GetUserDTO user = userService.getUserById(userId);
-                return ResponseEntity.ok(buildUserModel(user));
-        }
+    /* ===================== CURRENT USER ===================== */
+    @PreAuthorize("isAuthenticated()")
+    @GetMapping("/me")
+    public ResponseEntity<EntityModel<GetUserDTO>> getCurrentUser() {
+        Long userId = authUtils.getCurrentUserId();
+        GetUserDTO user = userService.getUserById(userId);
+        return ResponseEntity.ok(buildUserModel(user));
+    }
 
-        /* ===================== GET ALL USERS ===================== */
-        @GetMapping
-        public ResponseEntity<PagedModel<EntityModel<GetAllUsersDTO>>> getAllUsers(
-                        @RequestParam(defaultValue = "0") int page,
-                        @RequestParam(defaultValue = "10") int size) {
+    /* ===================== GET ALL USERS ===================== */
+    @PreAuthorize("hasAuthority('USER_VIEW')")
+    @GetMapping
+    public ResponseEntity<PagedModel<EntityModel<GetAllUsersDTO>>> getAllUsers(
+                    @RequestParam(defaultValue = "0") int page,
+                    @RequestParam(defaultValue = "10") int size) {
 
-                Pageable pageable = PageRequest.of(page, size);
-                Page<GetUserDTO> usersPage = userService.getAllUsers(pageable);
+        Pageable pageable = PageRequest.of(page, size);
+        Page<GetUserDTO> usersPage = userService.getAllUsers(pageable);
 
-                return ResponseEntity.ok(buildPagedUsers(usersPage, page, size));
-        }
+        return ResponseEntity.ok(buildPagedUsers(usersPage, page, size));
+    }
 
-        /* ===================== GET USERS BY ROLE ===================== */
-        @GetMapping("/role/{role}")
-        public ResponseEntity<PagedModel<EntityModel<GetAllUsersDTO>>> getUsersByRole(
-                        @PathVariable String role,
-                        @RequestParam(defaultValue = "0") int page,
-                        @RequestParam(defaultValue = "10") int size) {
+    /* ===================== GET USERS BY ROLE ===================== */
+    @PreAuthorize("hasAuthority('USER_VIEW')")
+    @GetMapping("/role/{role}")
+    public ResponseEntity<PagedModel<EntityModel<GetAllUsersDTO>>> getUsersByRole(
+                    @PathVariable String role,
+                    @RequestParam(defaultValue = "0") int page,
+                    @RequestParam(defaultValue = "10") int size) {
 
-                Pageable pageable = PageRequest.of(page, size);
+        Pageable pageable = PageRequest.of(page, size);
 
-                Page<GetUserDTO> usersPage = userService.getUsersByRole(roleResolver.resolveRole(role), pageable);
+        Page<GetUserDTO> usersPage = userService.getUsersByRole(roleResolver.resolveRole(role), pageable);
 
-                return ResponseEntity.ok(buildPagedUsers(usersPage, page, size));
-        }
+        return ResponseEntity.ok(buildPagedUsers(usersPage, page, size));
+    }
 
-        /* ===================== HELPER METHODS ===================== */
+    /* ===================== HELPER METHODS ===================== */
+    private EntityModel<GetUserDTO> buildUserModel(GetUserDTO user) {
+        return EntityModel.of(
+                        user,
+                        linkTo(methodOn(UserController.class).getUserById(user.getId())).withSelfRel(),
+                        linkTo(methodOn(UserController.class).getAllUsers(0, 10)).withRel("all-users"));
+    }
 
-        private EntityModel<GetUserDTO> buildUserModel(GetUserDTO user) {
-                return EntityModel.of(
-                                user,
-                                linkTo(methodOn(UserController.class).getUserById(user.getId())).withSelfRel(),
-                                linkTo(methodOn(UserController.class).getAllUsers(0, 10)).withRel("all-users"));
-        }
+    private PagedModel<EntityModel<GetAllUsersDTO>> buildPagedUsers(Page<GetUserDTO> usersPage, int page,
+                    int size) {
+        List<GetAllUsersDTO> dtos = usersPage.stream()
+                        .map(user -> new GetAllUsersDTO(
+                                        user.getId(),
+                                        user.getFirstName() + " " + user.getLastName(),
+                                        user.getIdNumber(),
+                                        user.getPhoneNumber(),
+                                        user.getProfilePicture(),
+                                        user.getRoles() // Updated to multi-role Set<Role>
+                        ))
+                        .toList();
 
-        private PagedModel<EntityModel<GetAllUsersDTO>> buildPagedUsers(Page<GetUserDTO> usersPage, int page,
-                        int size) {
-                List<GetAllUsersDTO> dtos = usersPage.stream()
-                                .map(user -> new GetAllUsersDTO(
-                                                user.getId(),
-                                                user.getFirstName() + " " + user.getLastName(),
-                                                user.getIdNumber(),
-                                                user.getPhoneNumber(),
-                                                user.getProfilePicture(),
-                                                user.getRoles() // Updated to multi-role Set<Role>
-                                ))
-                                .toList();
+        List<EntityModel<GetAllUsersDTO>> resources = dtos.stream()
+                        .map(dto -> EntityModel.of(dto,
+                                        linkTo(methodOn(UserController.class)
+                                                        .getUserById(dto.getId())).withSelfRel()))
+                        .collect(Collectors.toList());
 
-                List<EntityModel<GetAllUsersDTO>> resources = dtos.stream()
-                                .map(dto -> EntityModel.of(dto,
-                                                linkTo(methodOn(UserController.class)
-                                                                .getUserById(dto.getId())).withSelfRel()))
-                                .collect(Collectors.toList());
+        PagedModel.PageMetadata metadata = new PagedModel.PageMetadata(size, page,
+                        usersPage.getTotalElements());
 
-                PagedModel.PageMetadata metadata = new PagedModel.PageMetadata(size, page,
-                                usersPage.getTotalElements());
-
-                return PagedModel.of(resources, metadata);
-        }
+        return PagedModel.of(resources, metadata);
+    }
 }
